examples/invalid/missing_comma.jasn
// Missing comma between list elements
[1, 2, 3 4, 5]
